--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="title_activity_schedule">ScheduleActivity</string>
     <string name="underlined_edit"><u>Edit</u></string>
     <string name="underlined_delete"><u>Delete</u></string>
+    <string name="underlined_image"><u>View Image</u></string>
 </resources>
