--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">CP Scan</string>
+    <string name="app_name">AssisTech</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="title_activity_schedule">ScheduleActivity</string>
